app/assets/stylesheets/application.scss
// Custom bootstrap variables must be set or imported *before* bootstrap.
// @import "bootstrap-sprockets";
@import "bootstrap";

/* universal */
form {
  input[type="text"],
  input[type="password"],
  input[type="email"],
  input[type="file"],
  textarea {
    @extend .form-control;
  }

  input[type="submit"] {
    @extend .form-control;
    @extend .btn;
    @extend .btn-primary;
  }

  select {
    @extend .form-select;
  }

  .form-check input[type="checkbox"] {
    @extend .form-check-input;
  }

  .form-check input[type="checkbox"] {
    @extend .form-check-label;
  }

  > div {
    @extend .mb-3;
  }
}

/* shared */
.journal-card {
  @extend .d-flex;
  @extend .p-2;
  border-bottom: 1px solid $gray-500;

  .journal-avatar {
    @extend .me-2;

    .avatar {
      background-color: $gray-200;
      max-width: 2.5rem;
      max-height: auto;
      border-radius: 100%;
    }
  }

  .journal-content {
    @extend .flex-fill;

    .journal-header {
      @extend .d-flex;
      @extend .align-items-center;

      .button-destroy-journal {
        @extend .btn, .btn-danger;
        @extend .ms-1;
        --bs-btn-font-size: .75rem;
        --bs-btn-padding-x: .4rem;
      }
    }

    .journal-body {
      .pickle-link {
        @extend .d-block;
        font-size: 0.9rem;
      }

      p {
        @extend .my-1;
        font-size: 1.1rem;
      }
    }
  }
}

.journal-form {
  @extend .py-2;
}

/* home */
.home-bg {
  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), image-url('home_bg.jpg');
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}


/* user page */
.row-user-main-frame {
  @extend .row, .row-cols-md-2, .row-cols-1;
  @extend .justify-content-center;
  @extend .gy-3;

  .col-profile-pane {
    @extend .col-md-3, .col-12;

    .profile-card {
      @extend .d-flex;
      @extend .justify-content-md-center;
      @extend .align-items-md-start, .align-items-center;
      @extend .flex-md-wrap, .flex-nowrap;
      @extend .p-3;
      background-color: $gray-500;
      border-radius: 10px;

      .profile-avatar {
        @extend .col-md-12, .col-auto;
        @extend .text-md-center, .text-end;

        .avatar {
          @extend .my-2;
          background-color: $gray-200;
          max-width: 100px;
          max-height: auto;
          border-radius: 100%;
        }
      }

      .profile-body {
        @extend .col-md-12, .col-auto;
        @extend .text-md-center, .text-start, .text-break;
        @extend .mt-2;
        @extend .ps-md-0, .ps-3;
      }
    }
  }

  .col-content-pane {
    @extend .col-md-9, .col-12;

    .pickle-section {
      @extend .mb-3;
      @extend .p-3;
      background-color: $gray-300;
      border-radius: 10px;
    }

    .journal-section {
      @extend .p-3;
      background-color: $gray-300;
      border-radius: 10px;

      .journal-list-section {
        border-top: 1px solid $gray-500;
      }
    }
  }
}

.devise-form, .profile-form {
  @extend .col-xxl-6, .col-xl-7, .col-lg-8, .col-md-9;
  @extend .mx-3;
  @extend .px-4, .py-3;
  background-color: $gray-500;
  border-radius: 10px;

  h2 {
    text-align: center;
  }
}

.field_with_errors {
  display: inline;
}


/* pickle */
.pickle-form {
  background-color: $gray-500;
  border-radius: 10px;
  @extend .p-3;
  h2 {
    text-align: center;
  }
  .ingredients, .sauce-materials {
    @extend .p-2;
  }
}

/* miscellaneous */
.debug_dump {
  clear: both;
  float: left;
  width: 100%;
  margin-top: 2rem;
}

